--- a/NAMESPACE
+++ b/NAMESPACE
@@ -28,3 +28,6 @@ importFrom(curl,new_handle)
 importFrom(jsonlite,fromJSON)
 importFrom(jsonlite,toJSON)
 importFrom(magrittr,'%>%')
+importFrom(xml2,read_xml)
+importFrom(xml2,xml_child)
+importFrom(xml2,xml_text)
