--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,10 +11,16 @@ Authors@R: c(
 Description: Automates access to IBM Watson APIs to make it easy to request
     analyses of text, image and audio data.
 URL: http://columbuscollaboratory.com
-SystemRequirements: libcurl: libcurl-devel (rpm) or libcurl4-openssl-dev (deb).
-Depends: R (>= 3.2.2)
-Imports: curl, jsonlite (>= 0.9.19), magrittr (>= 1.5)
-Suggests: testthat, rmsfact
+SystemRequirements: 
+    libcurl: libcurl-devel (rpm) or libcurl4-openssl-dev (deb)
+Depends: R (>= 3.3.1)
+Imports: 
+    curl,
+    jsonlite (>= 0.9.19),
+    magrittr (>= 1.5)
+Suggests: 
+    testthat,
+    rmsfact
 Remotes: jeroenooms/curl
 License: MIT + file LICENSE
 LazyData: true
